[package]
name = "substrate-test-client"
description = "Client testing utilities"
version = "2.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = "4"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3.4.0" }
futures = "0.3"
serde = "1"
serde_json = "1"
sc-client-api = { version = "4.0.0-dev", path = "../../client/api" }
sc-client-db = { version = "0.10.0-dev", default-features = false, features = [
	"test-helpers",
], path = "../../client/db" }
sc-consensus = { version = "0.10.0-dev", path = "../../client/consensus/common" }
sc-executor = { version = "0.10.0-dev", path = "../../client/executor" }
sc-offchain = { version = "4.0.0-dev", path = "../../client/offchain" }
sc-service = { version = "0.10.0-dev", default-features = false, features = [
	"test-helpers",
], path = "../../client/service" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
sp-core = { version = "7", path = "../../primitives/core" }
sp-keyring = { version = "7", path = "../../primitives/keyring" }
sp-keystore = { version = "0.13", path = "../../primitives/keystore" }
sp-runtime = { version = "7", path = "../../primitives/runtime" }
sp-state-machine = { version = "0.13", path = "../../primitives/state-machine" }
