[package]
name = "sc-executor-wasmtime"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Defines a `WasmRuntime` that uses the Wasmtime JIT to execute."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4"
cfg-if = "1"
libc = "0.2"

# When bumping wasmtime do not forget to also bump rustix
# to exactly the same version as used by wasmtime!
wasmtime = { version = "12", default-features = false, features = [
	"cache",
	"cranelift",
	"jitdump",
	"parallel-compilation",
	"pooling-allocator"
] }
anyhow = "1"
sc-allocator = { version = "4.1.0-dev", path = "../../allocator" }
sc-executor-common = { version = "0.10.0-dev", path = "../common" }
sp-runtime-interface = { version = "17", path = "../../../primitives/runtime-interface" }
sp-wasm-interface = { version = "14", path = "../../../primitives/wasm-interface", features = ["wasmtime"] }

# Here we include the rustix crate in the exactly same semver-compatible version as used by
# wasmtime and enable its 'use-libc' flag.
#
# By default rustix directly calls the appropriate syscalls completely bypassing libc;
# this doesn't have any actual benefits for us besides making it harder to debug memory
# problems (since then `mmap` etc. cannot be easily hooked into).
rustix = { version = "0.38.4", default-features = false, features = ["std", "mm", "fs", "param", "use-libc"] }

[dev-dependencies]
wat = "1"
sc-runtime-test = { version = "2", path = "../runtime-test" }
sp-io = { version = "23", path = "../../../primitives/io" }
tempfile = "3"
paste = "1"
codec = { package = "parity-scale-codec", version = "3" }
cargo_metadata = "0.17"
