[package]
description = "Substrate network common"
name = "sc-network-common"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-network-sync"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.11"

[dependencies]
array-bytes = "4"
async-trait = "0.1"
bitflags = "1"
bytes = "1"
codec = { package = "parity-scale-codec", version = "3.4.0", features = [
	"derive",
] }
futures = "0.3"
futures-timer = "3"
libp2p-identity = { version = "0.1", features = ["peerid"] }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../../utils/prometheus" }
smallvec = "1"
sc-consensus = { version = "0.10.0-dev", path = "../../consensus/common" }
sc-peerset = { version = "4.0.0-dev", path = "../../peerset" }
sp-consensus = { version = "0.10.0-dev", path = "../../../primitives/consensus/common" }
sp-consensus-grandpa = { version = "4.0.0-dev", path = "../../../primitives/consensus/grandpa" }
sp-runtime = { version = "7", path = "../../../primitives/runtime" }

[dev-dependencies]
tempfile = "3"
