[package]
description = "Substrate statement protocol"
name = "sc-network-statement"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-network-statement"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = "6"
async-channel = "1"
codec = { package = "parity-scale-codec", version = "3", features = ["derive"] }
futures = "0.3"
libp2p = "0.51"
log = "0.4"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../../utils/prometheus" }
sc-network-common = { version = "0.10.0-dev", path = "../common" }
sc-network = { version = "0.10.0-dev", path = "../" }
sp-consensus = { version = "0.10.0-dev", path = "../../../primitives/consensus/common" }
sp-statement-store = { version = "4.0.0-dev", path = "../../../primitives/statement-store" }
