[package]
description = "Substrate sync network protocol"
name = "sc-network-sync"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-network-sync"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.11"

[dependencies]
array-bytes = "6"
async-channel = "1"
async-trait = "0.1"
codec = { package = "parity-scale-codec", version = "3", features = ["derive"] }
futures = "0.3"
futures-timer = "3"
libp2p = "0.51"
log = "0.4"
mockall = "0.11"
prost = "0.11"
schnellru = "0.2"
smallvec = "1"
thiserror = "1.0"
fork-tree = { version = "3", path = "../../../utils/fork-tree" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../../utils/prometheus" }
sc-client-api = { version = "4.0.0-dev", path = "../../api" }
sc-consensus = { version = "0.10.0-dev", path = "../../consensus/common" }
sc-network = { version = "0.10.0-dev", path = "../" }
sc-network-common = { version = "0.10.0-dev", path = "../common" }
sc-utils = { version = "4.0.0-dev", path = "../../utils" }
sp-arithmetic = { version = "16", path = "../../../primitives/arithmetic" }
sp-blockchain = { version = "4.0.0-dev", path = "../../../primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../../../primitives/consensus/common" }
sp-core = { version = "21", path = "../../../primitives/core" }
sp-consensus-grandpa = { version = "4.0.0-dev", path = "../../../primitives/consensus/grandpa" }
sp-runtime = { version = "24", path = "../../../primitives/runtime" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
quickcheck = { version = "1.0.3", default-features = false }
sc-block-builder = { version = "0.10.0-dev", path = "../../block-builder" }
sp-test-primitives = { version = "2", path = "../../../primitives/test-primitives" }
sp-tracing = { version = "10", path = "../../../primitives/tracing" }
substrate-test-runtime-client = { version = "2", path = "../../../test-utils/runtime/client" }
