[package]
name = "frame-support-procedural"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Proc macro of Support code for the runtime."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.1"
Inflector = "0.11"
cfg-expr = "0.15"
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
frame-support-procedural-tools = { version = "4.0.0-dev", path = "./tools" }
proc-macro-warning = { version = "0.4.1", default-features = false }
macro_magic = { version = "0.4.1", features = ["proc_support"] }
expander = "2.0.0"

[features]
default = ["std"]
std = []
no-metadata-docs = []
# Generate impl-trait for tuples with the given number of tuples. Will be needed as the number of
# pallets in a runtime grows. Does increase the compile time!
tuples-96 = []
tuples-128 = []
