[package]
name = "sp-api-proc-macro"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Macros for declaring and implementing runtime apis."
documentation = "https://docs.rs/sp-api-proc-macro"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full", "fold", "extra-traits", "visit"] }
proc-macro2 = "1"
blake2 = { version = "0.10", default-features = false }
proc-macro-crate = "1"
expander = "1"
Inflector = "0.11"

[dev-dependencies]
assert_matches = "1"

# Required for the doc tests
[features]
default = ["std"]
std = []
