[package]
name = "sp-consensus"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Common utilities for building and using consensus engines in substrate."
documentation = "https://docs.rs/sp-consensus/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["thread-pool"] }
log = "0.4"
thiserror = "1"
sp-inherents = { version = "4.0.0-dev", path = "../../inherents" }
sp-runtime = { version = "24", path = "../../runtime" }
sp-state-machine = { version = "0.28", path = "../../state-machine" }

[dev-dependencies]
futures = "0.3"
sp-test-primitives = { version = "2", path = "../../test-primitives" }

[features]
default = []
