[package]
name = "frame-benchmarking-cli"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "CLI for benchmarking FRAME"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = "6"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3" }
comfy-table = { version = "7", default-features = false }
handlebars = "4"
Inflector = "0.11"
itertools = "0.10"
lazy_static = "1"
linked-hash-map = "0.5"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
rand_pcg = "0.3"
serde = "1"
serde_json = "1"
thiserror = "1"
thousands = "0.2"
frame-benchmarking = { version = "4.0.0-dev", path = "../../../frame/benchmarking" }
frame-support = { version = "4.0.0-dev", path = "../../../frame/support" }
frame-system = { version = "4.0.0-dev", path = "../../../frame/system" }
sc-block-builder = { version = "0.10.0-dev", path = "../../../client/block-builder" }
sc-cli = { version = "0.10.0-dev", default-features = false, path = "../../../client/cli" }
sc-client-api = { version = "4.0.0-dev", path = "../../../client/api" }
sc-client-db = { version = "0.10.0-dev", default-features = false, path = "../../../client/db" }
sc-executor = { version = "0.10.0-dev", path = "../../../client/executor" }
sc-service = { version = "0.10.0-dev", default-features = false, path = "../../../client/service" }
sc-sysinfo = { version = "6.0.0-dev", path = "../../../client/sysinfo" }
sp-api = { version = "4.0.0-dev", path = "../../../primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../../primitives/blockchain" }
sp-core = { version = "21", path = "../../../primitives/core" }
sp-database = { version = "4.0.0-dev", path = "../../../primitives/database" }
sp-externalities = { version = "0.19", path = "../../../primitives/externalities" }
sp-inherents = { version = "4.0.0-dev", path = "../../../primitives/inherents" }
sp-keystore = { version = "0.27", path = "../../../primitives/keystore" }
sp-runtime = { version = "24", path = "../../../primitives/runtime" }
sp-state-machine = { version = "0.28", path = "../../../primitives/state-machine" }
sp-storage = { version = "13", path = "../../../primitives/storage" }
sp-trie = { version = "22", path = "../../../primitives/trie" }
sp-io = { version = "23", path = "../../../primitives/io" }
sp-wasm-interface = { version = "14", path = "../../../primitives/wasm-interface" }
gethostname = "0.4"

[features]
default = ["rocksdb"]
runtime-benchmarks = ["sc-client-db/runtime-benchmarks"]
rocksdb = ["sc-cli/rocksdb", "sc-client-db/rocksdb"]
